Initial Catalog Service

--- a/src/Services/EShop.Service.CatalogAPI/EShop.Service.CatalogAPI.csproj
+++ b/src/Services/EShop.Service.CatalogAPI/EShop.Service.CatalogAPI.csproj
@@ -4,8 +4,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>3fef363f-2757-4d0a-98fe-86d9e0b6c8a0</UserSecretsId>
+    <UserSecretsId>71e19f62-16d9-4493-96c2-74fc6e0bc809</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
