--- a/src/Services/EShop.Service.CatalogAPI/Dockerfile
+++ b/src/Services/EShop.Service.CatalogAPI/Dockerfile
@@ -12,10 +12,10 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["EShop.Service.CatalogAPI/EShop.Service.CatalogAPI.csproj", "EShop.Service.CatalogAPI/"]
-RUN dotnet restore "./EShop.Service.CatalogAPI/EShop.Service.CatalogAPI.csproj"
+COPY ["src/Services/EShop.Service.CatalogAPI/EShop.Service.CatalogAPI.csproj", "src/Services/EShop.Service.CatalogAPI/"]
+RUN dotnet restore "./src/Services/EShop.Service.CatalogAPI/EShop.Service.CatalogAPI.csproj"
 COPY . .
-WORKDIR "/src/EShop.Service.CatalogAPI"
+WORKDIR "/src/src/Services/EShop.Service.CatalogAPI"
 RUN dotnet build "./EShop.Service.CatalogAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
