Initial Catalog Service

--- a/src/Services/Catalog/EShop.Service.CatalogAPI/EShop.Service.CatalogAPI.csproj
+++ b/src/Services/Catalog/EShop.Service.CatalogAPI/EShop.Service.CatalogAPI.csproj
@@ -4,9 +4,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>71e19f62-16d9-4493-96c2-74fc6e0bc809</UserSecretsId>
+    <UserSecretsId>4b50ac81-18c2-4e7a-9ac9-7f9d14089b2c</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerfileContext>..\..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
