Register DI Container Martern - PostgreSQL

--- a/src/Services/Catalog/EShop.Service.CatalogAPI/Dockerfile
+++ b/src/Services/Catalog/EShop.Service.CatalogAPI/Dockerfile
@@ -1,4 +1,4 @@
-﻿# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
@@ -13,6 +13,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["src/Services/Catalog/EShop.Service.CatalogAPI/EShop.Service.CatalogAPI.csproj", "src/Services/Catalog/EShop.Service.CatalogAPI/"]
+COPY ["src/BuidingBlocks/BuidingBlocks/BuidingBlocks.csproj", "src/BuidingBlocks/BuidingBlocks/"]
 RUN dotnet restore "./src/Services/Catalog/EShop.Service.CatalogAPI/EShop.Service.CatalogAPI.csproj"
 COPY . .
 WORKDIR "/src/src/Services/Catalog/EShop.Service.CatalogAPI"
