--- a/src/Services/Catalog/EShop.Service.CatalogAPI/EShop.Service.CatalogAPI.csproj
+++ b/src/Services/Catalog/EShop.Service.CatalogAPI/EShop.Service.CatalogAPI.csproj
@@ -7,10 +7,12 @@
     <UserSecretsId>4b50ac81-18c2-4e7a-9ac9-7f9d14089b2c</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Carter" Version="8.0.0" />
+    <PackageReference Include="Marten" Version="7.37.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
 
