--- a/src/Services/Catalog/EShop.Service.CatalogAPI/appsettings.Production.json
+++ b/src/Services/Catalog/EShop.Service.CatalogAPI/appsettings.Production.json
@@ -1,6 +1,6 @@
-{
+﻿{
   "ConnectionStrings": {
-    "Database": "Host=localhost;Port=5432;Database=EShopCatalogDb;Username=postgres;Password=123456;Include Error Detail=true"
+    "Database": "Host=catalogdb;Port=5432;Database=EShopCatalogDb;Username=postgres;Password=123456;Include Error Detail=true"
   },
   "Logging": {
     "LogLevel": {
