Basket Distributed Cache - Redis

--- a/src/Services/Basket/EShop.Service.BasketAPI/appsettings.Production.json
+++ b/src/Services/Basket/EShop.Service.BasketAPI/appsettings.Production.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "Database": "Host=basketdb;Port=5432;Database=EShopBasketDb;Username=postgres;Password=123456;Include Error Detail=true"
+    "Database": "Host=basketdb;Port=5432;Database=EShopBasketDb;Username=postgres;Password=123456;Include Error Detail=true",
+    "Redis": "distributedcache:6379"
   },
   "Logging": {
     "LogLevel": {
