--- a/src/Services/Basket/EShop.Service.BasketAPI/EShop.Service.BasketAPI.csproj
+++ b/src/Services/Basket/EShop.Service.BasketAPI/EShop.Service.BasketAPI.csproj
@@ -14,7 +14,9 @@
 	  <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.0" />
 	  <PackageReference Include="Carter" Version="8.0.0" />
 	  <PackageReference Include="Marten" Version="7.37.3" />
+	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+	  <PackageReference Include="Scrutor" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
