--- a/src/Services/Basket/EShop.Service.BasketAPI/appsettings.Development.json
+++ b/src/Services/Basket/EShop.Service.BasketAPI/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=localhost;Port=5432;Database=EShopBasketDb;Username=postgres;Password=123456;Include Error Detail=true"
+    "Database": "Host=localhost;Port=5432;Database=EShopBasketDb;Username=postgres;Password=123456;Include Error Detail=true",
+    "Redis": "localhost:6379"
   },
   "Logging": {
     "LogLevel": {
