config docker-compose: config Redis

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -13,6 +13,7 @@ services:
      volumes:
         - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
         - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
   basketgapi:
      build:
         context: ./src/Services/Basket/EShop.Service.BasketAPI
@@ -26,26 +27,34 @@ services:
         - basketdb
      volumes:
         - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
-        - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+        - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro 
+
+  distributedcache:
+     container_name: distributedcache
+     restart: always
+     ports:
+        - "6379:6379"
+
   catalogdb:
-    container_name: catalogdb
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=123456
-      - POSTGRES_DB=EShopCatalogDb
-    restart: always
-    ports:
+     container_name: catalogdb
+     environment:
+        - POSTGRES_USER=postgres
+        - POSTGRES_PASSWORD=123456
+        - POSTGRES_DB=EShopCatalogDb
+     restart: always
+     ports:
         - "5433:5432"
-    volumes:
-      - postgres_catalog:/var/lib/postgresql/data/  
+     volumes:
+        - postgres_catalog:/var/lib/postgresql/data/  
+
   basketdb:
-    container_name: basketdb
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=123456
-      - POSTGRES_DB=EShopBasketDb
-    restart: always
-    ports:
+     container_name: basketdb
+     environment:
+        - POSTGRES_USER=postgres
+        - POSTGRES_PASSWORD=123456
+        - POSTGRES_DB=EShopBasketDb
+     restart: always
+     ports:
         - "5432:5432"
-    volumes:
-      - postgres_basket:/var/lib/postgresql/data/  
+     volumes:
+        - postgres_basket:/var/lib/postgresql/data/  
