--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: postgres
   basketdb:
     image: postgres
+  distributedcache:
+    image: redis
 
 volumes:
   postgres_catalog:
