--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,16 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# SQLite database files
+*.db
+*.sqlite
+*.sqlite3
+*.db-shm
+*.db-wal
+discountdb
+discountdb-shm
+discountdb-wal
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
