--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -29,6 +29,20 @@ services:
         - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
         - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro 
 
+  discountgrpc:
+     build:
+        context: ./src/Services/Discount/EShop.Service.DiscountGRPC
+        dockerfile: Dockerfile
+     environment:
+        - ASPNETCORE_ENVIRONMENT=Production
+        - ASPNETCORE_HTTP_PORTS=8080
+        - ConnectionStrings__Database=Data Source=discountdb
+     ports:
+        - "6002:8080"
+     volumes:
+        - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+        - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
   distributedcache:
      container_name: distributedcache
      restart: always
