Basker comsumes Discount gRPC service

--- a/src/Services/Basket/EShop.Service.BasketAPI/appsettings.Development.json
+++ b/src/Services/Basket/EShop.Service.BasketAPI/appsettings.Development.json
@@ -3,6 +3,9 @@
     "Database": "Host=localhost;Port=5432;Database=EShopBasketDb;Username=postgres;Password=123456;Include Error Detail=true",
     "Redis": "localhost:6379"
   },
+  "GrpcSettings": {
+    "DiscountUrl": "https://localhost:5052"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
