--- a/src/Services/Basket/EShop.Service.BasketAPI/EShop.Service.BasketAPI.csproj
+++ b/src/Services/Basket/EShop.Service.BasketAPI/EShop.Service.BasketAPI.csproj
@@ -13,6 +13,7 @@
 	  <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="8.0.0" />
 	  <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.0" />
 	  <PackageReference Include="Carter" Version="8.0.0" />
+	  <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
 	  <PackageReference Include="Marten" Version="7.37.3" />
 	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
@@ -21,6 +22,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\BuidingBlocks\BuidingBlocks\BuidingBlocks.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="..\..\Discount\EShop.Service.DiscountGRPC\Protos\discount.proto" GrpcServices="Client">
+      <Link>Protos\discount.proto</Link>
+    </Protobuf>
   </ItemGroup>
 
 </Project>
