--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -21,6 +21,7 @@ services:
      environment:
         - ASPNETCORE_ENVIRONMENT=Production
         - ASPNETCORE_HTTP_PORTS=8080
+        - GrpcSettings__DiscountUrl=http://discountgrpc:8080
      ports:
         - "6001:8080"
      depends_on:
